--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     font-family: 'Work Sans', sans-serif;
 }
 
+:root {
+    --primary-text-color: #0B0223;
+}
+
 .logo-title {
     font-size: 2.8125rem;
     font-weight: 700;
@@ -18,6 +22,13 @@
     display: flex;
     align-items: center;
     gap: 20px;
+}
+
+.primary-text-design {
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+background-clip: text;
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
 }
 
 /* Header Sections Style Starts From Here */
@@ -50,4 +61,56 @@
     border: none;
     border-radius: 8px;
     background: rgba(11, 2, 35, 0.10);
+}
+
+/* Banner Section styles */
+
+.banner-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.banner-content-container {
+    background-image: url(images/Group\ 14.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: ;
+    width: 900px;
+    height: 700px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.banner-title {
+    color: var(--primary-text-color);
+    font-size: 3rem;
+    font-weight: 600;
+    margin: 0px;
+}
+
+.banner-content-header {
+    font-size: 5.9rem;
+    font-weight: 800;
+    margin:0px;
+}
+
+.banner-description {
+   display: flex;
+   align-items: center;
+   gap: 12px;
+   color: #534C64;
+   font-size: 1.25rem;
+   font-weight: 500;
+}
+
+.banner-image-container {
+    padding-right: 240px;
+}
+
+/* Responsive Media Query Starts From Here */
+
+@media screen and (max-width: 576px) {
+    
 }
