--- a/style.css
+++ b/style.css
@@ -45,9 +45,8 @@ background-clip: text;
 /* Navigation Section Styles */
 
 .navigation-ber {
-    padding: 0 240px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
     height: 130px;
@@ -240,6 +239,7 @@ background-clip: text;
     justify-content: center;
     align-items: center;
     gap: 40px;
+    margin-bottom: 50px;
 }
 
 .security-list {
@@ -254,8 +254,56 @@ background-clip: text;
     color: rgba(255, 255, 255, 0.60);
 }
 
+.all {
+    display:none;
+}
+
 /* Responsive Media Query Starts From Here */
 
-@media screen and (max-width: 576px) {
-    
+@media screen and (max-width: 425px) {
+    .navigation-ber {
+        box-shadow: none;
+        flex-direction: column;
+        height:300px;
+        padding: 0;
+    }
+
+    .list-container {
+        flex-direction: column;
+        padding: 0;
+    }
+
+    .banner-container {
+        flex-direction: column-reverse;
+        gap: 15px;
+    }
+
+    .banner-image-container {
+        padding: 0;
+    }
+
+    .banner-img {
+        width: 360px;
+    }
+
+    .banner-content-container {
+        width: 360px;
+        height: 310px;
+        background-size: contain; 
+    }
+
+    .banner-content {
+        padding-bottom: 30px;
+    }
+    .banner-title {
+        font-size: 24px;
+    }
+
+    .banner-content-header {
+        font-size: 48px;
+    }
+
+    .banner-description {
+        font-size: 12px;
+    }
 }
