--- a/style.css
+++ b/style.css
@@ -1,43 +1,43 @@
 /* Common Styles Start From Here */
 
 * {
-    font-family: 'Work Sans', sans-serif;
+  font-family: "Work Sans", sans-serif;
 }
 
 :root {
-    --primary-text-color: #0B0223;
-    --secondery-text-color: #534C64;
+  --primary-text-color: #0b0223;
+  --secondery-text-color: #534c64;
 }
 
 .logo-title {
-    font-size: 2.8125rem;
-    font-weight: 700;
-    color: #0B0223;
-    margin: 0;
+  font-size: 2.8125rem;
+  font-weight: 700;
+  color: #0b0223;
+  margin: 0;
 }
 
 .title-design {
-    color:#FF42A5;
+  color: #ff42a5;
 }
 
 .logo-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
 }
 
 .primary-description {
-    color: var(--secondery-text-color);
-    font-size: 1.13rem;
-    margin-bottom: 48px;
+  color: var(--secondery-text-color);
+  font-size: 1.13rem;
+  margin-bottom: 48px;
 }
 
 .primary-text-design {
-    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
-background-clip: text;
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
+  background: linear-gradient(180deg, #f948b2 0%, #8758f1 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 /* Header Sections Style Starts From Here */
@@ -45,440 +45,481 @@ background-clip: text;
 /* Navigation Section Styles */
 
 .navigation-bar {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
-    height: 130px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
+  height: 130px;
 }
 
 .list-container {
-    display: flex;
-    align-items: center;
-    list-style: none;
-    gap: 32px;
+  display: flex;
+  align-items: center;
+  list-style: none;
+  gap: 32px;
 }
 
 .list-item {
-    font-size: 18px;
-    font-weight: 500;
-    color: rgba(60, 53, 79, 1);
+  font-size: 18px;
+  font-weight: 500;
+  color: rgba(60, 53, 79, 1);
 }
 
 .follow-btn {
-    padding: 18px 24px;
-    border: none;
-    border-radius: 8px;
-    background: rgba(11, 2, 35, 0.10);
-    display: flex;
-    align-items: center;
-    gap: 16px;
+  padding: 18px 24px;
+  border: none;
+  border-radius: 8px;
+  background: rgba(11, 2, 35, 0.1);
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
 
 /* Banner Section styles */
 
 .banner-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .banner-content-container {
-    background-image: url(images/Group\ 14.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: ;
-    width: 900px;
-    height: 700px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  background-image: url(images/Group\ 14.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: ;
+  width: 900px;
+  height: 700px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .banner-title {
-    color: var(--primary-text-color);
-    font-size: 3rem;
-    font-weight: 600;
-    margin: 0px;
+  color: var(--primary-text-color);
+  font-size: 3rem;
+  font-weight: 600;
+  margin: 0px;
 }
 
 .banner-content-header {
-    font-size: 5.9rem;
-    font-weight: 800;
-    margin:0px;
+  font-size: 5.9rem;
+  font-weight: 800;
+  margin: 0px;
 }
 
 .banner-description {
-   display: flex;
-   align-items: center;
-   gap: 12px;
-   color: var(--secondery-text-color);
-   font-size: 1.25rem;
-   font-weight: 500;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  color: var(--secondery-text-color);
+  font-size: 1.25rem;
+  font-weight: 500;
 }
 
-.pink-btn, .blue-btn {
-    padding: 21px 40px;
-    color: #FFF;
-    font-size: 20px;
-    border: none;
-    border-radius: 48px;
+.pink-btn,
+.blue-btn {
+  padding: 21px 40px;
+  color: #fff;
+  font-size: 20px;
+  border: none;
+  border-radius: 48px;
 }
 
 .pink-btn {
-    background-color: #FF42A5;
+  background-color: #ff42a5;
 }
 
 .blue-btn {
-    background-color: #4EC5F7;
+  background-color: #4ec5f7;
 }
 
 .banner-image-container {
-    padding-right: 240px;
+  padding-right: 240px;
 }
 
 /* Online Games & Videos Section Styles */
 
 .online-games-container {
-    margin: 120px 240px;
+  margin: 120px 240px;
 }
 
 .games-content-container {
-    text-align: center;
+  text-align: center;
 }
 
 .online-games-title {
-    color: var(--primary-text-color);
-    font-size: 3rem;
-    font-weight: 700;
-    margin: 16px 0px;
+  color: var(--primary-text-color);
+  font-size: 3rem;
+  font-weight: 700;
+  margin: 16px 0px;
 }
 
 .online-games-description {
-    margin-bottom: 48px;
+  margin-bottom: 48px;
 }
 .games-card-container {
-    display: flex;
-    justify-content: space-around;
-    gap: 24px;
+  display: flex;
+  justify-content: space-around;
+  gap: 24px;
+}
+
+.overlay-description {
+    color: #ff42a5;
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
 }
 
 .card {
-    max-width: 342px;
+  max-width: 342px;
+}
+
+.card {
+  position: relative;
+  display: inline-block;
+  height: 400px;
+}
+
+.overlay {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  left: 50%;
+  bottom: 50%;
+  text-align: center;
+  transform: translate(-50%, -50%);
+  width: 48px;
+  height: 48px;
+  background-image: url("icon/play-button\ 1.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.card:hover .overlay {
+    opacity: 1;
+}
+
+.card:hover {
+    border: 3px solid #ff42a5;
+    border-radius: 20px;
 }
 
 .card-description {
-    color: var(--secondery-text-color);
-    font-size: 1.25rem;
-    font-weight: 500;
+  color: var(--secondery-text-color);
+  font-size: 1.25rem;
+  font-weight: 500;
 }
 
 /* Play Instantly Section Styles */
 
 .no-installs-game-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 240px 120px 360px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 240px 120px 360px;
 }
 
 .no-installs-games-content-container {
-    max-width: 341px;
-    text-align: right;
+  max-width: 341px;
+  text-align: right;
 }
 
 .no-installs-title {
-    color: var(--primary-text-color);
-    font-size: 3rem;
-    margin: 24px 0;
+  color: var(--primary-text-color);
+  font-size: 3rem;
+  margin: 24px 0;
 }
 
 .no-installs-games-image-container {
-    max-height: 725px;
+  max-height: 725px;
 }
 
 .overflow-image {
-    width: 319px;
-    position: relative;
-    bottom: 290px;
-    right: 150px;
+  width: 319px;
+  position: relative;
+  bottom: 290px;
+  right: 150px;
 }
 
 /* Game Section Styles */
 
 .game-container {
-  margin: 0px 240px 120px 240px;  
+  margin: 0px 240px 120px 240px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap:27px;
+  gap: 27px;
 }
 
 .game {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 16px;
-    border: none;
-    border-radius: 50px;
-    background: #FFF;
-    padding: 10px;
-    color:#0B0223;
-    font-size: 20px;
-    font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 16px;
+  border: none;
+  border-radius: 50px;
+  background: #fff;
+  padding: 10px;
+  color: #0b0223;
+  font-size: 20px;
+  font-weight: 600;
 }
 
 .game:hover {
-    color: #F948B2;
-    border: 1px solid #F948B2;
+  color: #f948b2;
+  border: 1px solid #f948b2;
 }
 
 /* Footer Section Styles */
 
-
 .footer-container {
-    padding: 120px 0px;
-    background-color: var(--primary-text-color);
+  padding: 120px 0px;
+  background-color: var(--primary-text-color);
 }
 
 .footer {
-    text-align: center;
+  text-align: center;
 }
 
 .footer-logo-title {
-    color: white;
+  color: white;
 }
 
 .menu-list-container {
-    color: white;
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    gap: 60px;
-    margin: 56px 0px;
-    padding-left: 0;
+  color: white;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  gap: 60px;
+  margin: 56px 0px;
+  padding-left: 0;
 }
 
 .social-media-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 40px;
-    margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  margin-bottom: 50px;
 }
 
 .security-list {
-    list-style: none;
-    color:  rgba(255, 255, 255, 0.60);
-    display: flex;
-    justify-content: center;
-    gap: 60px;
-    margin-bottom: 70px;
+  list-style: none;
+  color: rgba(255, 255, 255, 0.6);
+  display: flex;
+  justify-content: center;
+  gap: 60px;
+  margin-bottom: 70px;
 }
 
 .footer-description {
-    color: rgba(255, 255, 255, 0.60);
+  color: rgba(255, 255, 255, 0.6);
 }
 
 /* Responsive Media Query Starts From Here */
 
 @media screen and (max-width: 425px) {
+  .primary-description {
+    font-size: 12px;
+  }
 
-    .primary-description {
-        font-size: 12px;
-    }
+  .logo-container {
+    gap: 8px;
+  }
 
-    .logo-container {
-        gap: 8px;
-    }
+  .logo {
+    width: 60px;
+  }
 
-    .logo {
-        width: 60px;
-    }
+  .logo-title {
+    font-size: 28px;
+  }
 
-    .logo-title {
-        font-size: 28px;
-    }
+  /* Navigation bar Responsive */
 
-    /* Navigation bar Responsive */
+  .navigation-bar {
+    box-shadow: none;
+    flex-direction: column;
+    height: 300px;
+    padding: 0;
+  }
 
-    .navigation-bar {
-        box-shadow: none;
-        flex-direction: column;
-        height:300px;
-        padding: 0;
-    }
+  .list-container {
+    flex-direction: column;
+    padding: 0;
+  }
 
-    .list-container {
-        flex-direction: column;
-        padding: 0;
-    }
+  .list-container li {
+    font-size: 12px;
+  }
 
-    .list-container li {
-        font-size: 12px;
-    }
+  .follow-btn {
+    padding: 9px 12px;
+    border-radius: 5px;
+    font-size: 12px;
+    gap: 8px;
+  }
 
-    .follow-btn {
-        padding: 9px 12px;
-        border-radius: 5px;
-        font-size: 12px;
-        gap: 8px;
-    }
+  .youtube {
+    width: 25px;
+  }
 
-    .youtube {
-        width: 25px;
-    }
+  .tik-tok {
+    width: 20px;
+  }
 
-    .tik-tok {
-        width: 20px;
-    }
+  /* Banner Section Responsive */
 
-    /* Banner Section Responsive */
+  .banner-container {
+    flex-direction: column-reverse;
+    gap: 15px;
+  }
 
-    .banner-container {
-        flex-direction: column-reverse;
-        gap: 15px;
-    }
+  .banner-image-container {
+    padding: 0;
+  }
 
-    .banner-image-container {
-        padding: 0;
-    }
+  .banner-img {
+    width: 360px;
+  }
 
-    .banner-img {
-        width: 360px;
-    }
+  .banner-content-container {
+    width: 360px;
+    height: 310px;
+    background-size: contain;
+  }
 
-    .banner-content-container {
-        width: 360px;
-        height: 310px;
-        background-size: contain; 
-    }
+  .banner-content {
+    padding-bottom: 30px;
+  }
+  .banner-title {
+    font-size: 24px;
+  }
 
-    .banner-content {
-        padding-bottom: 30px;
-    }
-    .banner-title {
-        font-size: 24px;
-    }
+  .banner-content-header {
+    font-size: 48px;
+  }
 
-    .banner-content-header {
-        font-size: 48px;
-    }
+  .banner-description {
+    font-size: 12px;
+  }
 
-    .banner-description {
-        font-size: 12px;
-    }
+  .pink-btn, .blue-btn {
+    padding: 10px 20px;
+    font-size: 10px;
+  }
 
-    /* Online Game Section Responsive */
+  /* Online Game Section Responsive */
 
-    .online-games-container {
-        margin: 20px 32.5px;
-    }
+  .online-games-container {
+    margin: 20px 32.5px;
+  }
 
-    .online-games-title {
-        font-size: 24px;
-    }
+  .online-games-title {
+    font-size: 24px;
+  }
 
-    .online-games-description {
-        font-size: 12px;
-    }
+  .online-games-description {
+    font-size: 12px;
+  }
 
-    .games-card-container {
-        flex-direction: column;
-    }
+  .games-card-container {
+    flex-direction: column;
+  }
 
-    .card-description {
-        font-size: 16px;
-    }
+  .card-description {
+    font-size: 16px;
+  }
 
-    /* Play Instantly Section Responsive */
+  /* Play Instantly Section Responsive */
 
-    .no-installs-game-container {
-        flex-direction: column;
-        margin: 40px 0px;
-    }
+  .no-installs-game-container {
+    flex-direction: column;
+    margin: 40px 0px;
+  }
 
-    .no-installs-games-image-container {
-        height: 400px;
-    }
+  .no-installs-games-image-container {
+    height: 400px;
+  }
 
-    .no-installs-games-content-container {
-        text-align: center;
-    }
+  .no-installs-games-content-container {
+    text-align: center;
+  }
 
-    .no-installs-title {
-        font-size: 24px;
-    }
+  .no-installs-title {
+    font-size: 24px;
+  }
 
-    
+  .main-image {
+    width: 320px;
+    padding-left: 60px;
+  }
 
-    .main-image {
-        width: 320px;
-        padding-left:60px ;
-    }
+  .overflow-image {
+    bottom: 95px;
+    right: 5px;
+  }
 
-    .overflow-image {
-        bottom: 95px;
-        right: 5px;
-    }
+  .overflow {
+    width: 140px;
+  }
 
-    .overflow {
-        width: 140px;
-    }
+  /* Game Section Responsive */
 
-    /* Game Section Responsive */
+  .game-container {
+    margin: 0px 32.5px 30px;
+    gap: 5px;
+  }
 
-    .game-container {
-        margin: 0px 32.5px 30px;
-        gap: 5px;
-    }
+  .game {
+    width: 110px;
+    font-size: 6px;
+    gap: 0px;
+    padding: 5px;
+  }
 
-    .game {
-        width: 110px;
-        font-size: 6px;
-        gap:0px;
-        padding: 5px;
-    }
+  .game-logo {
+    width: 25px;
+  }
 
-    .game-logo {
-        width: 25px;
-    }
+  /* Footer Section Responsive */
 
-    /* Footer Section Responsive */
+  .footer-container {
+    padding: 40px 0;
+  }
 
-    .footer-container {
-        padding: 40px 0;
-    }
+  .footer {
+    padding: 0px;
+    max-width: 200px;
+    margin: 0px auto;
+    text-align: center;
+  }
 
-    .footer {
-        padding: 0px;
-        max-width: 200px;
-        margin: 0px auto;
-        text-align: center;
-    }
+  .menu-list-container {
+    flex-wrap: wrap;
+    font-size: 10px;
+    gap: 20px;
+  }
 
-    .menu-list-container {
-        flex-wrap: wrap;
-        font-size: 10px;
-        gap: 20px;
-    }
+  .social-media-container {
+    flex-wrap: wrap;
+  }
 
-    .social-media-container {
-        flex-wrap: wrap;
-    }
+  .contact {
+    width: 30px;
+  }
 
-    .social-media-container img {
-        width: 30px;
-    }
-
-    .security-list {
-        flex-wrap: wrap;
-        font-size: 8px;
-        gap: 20px;
-        padding-left: 0;
-        margin-bottom: 30px;
-    }
-    .footer-description {
-        font-size: 8px;
-    }
+  .security-list {
+    flex-wrap: wrap;
+    font-size: 8px;
+    gap: 20px;
+    padding-left: 0;
+    margin-bottom: 30px;
+  }
+  .footer-description {
+    font-size: 8px;
+  }
 }
