--- a/style.css
+++ b/style.css
@@ -144,6 +144,46 @@
   padding-right: 240px;
 }
 
+/* We Are Gamer Section Styles */
+
+.we-are-gamer-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 0 240px;
+  height: 600px;
+  background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
+}
+
+.gamer-content-container {
+  width: 520px;
+  text-align: right;
+}
+
+.gamer-title {
+  font-size: 48px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.gamer-description {
+  margin-bottom: 32px;
+}
+
+.gamer-btn {
+  margin-bottom: 24px;
+}
+
+.purpose {
+  color: #534c64;
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.purpose-design {
+  font-size: 32px;
+  font-weight: 700;
+}
 /* Online Games & Videos Section Styles */
 
 .online-games-container {
@@ -435,6 +475,43 @@
     font-size: 10px;
   }
 
+  /* We Are Gamer Section Responsive */
+
+  .we-are-gamer-container {
+    flex-direction: column;
+    padding: 0;
+    height: auto;
+  }
+
+  .gamer-image {
+    width: 360px;
+  }
+  .gamer-content-container {
+    width: 341px;
+    text-align: center;
+  }
+
+  .gamer-title {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  .gamer-description {
+    margin-bottom: 16px;
+  }
+
+  .gamer-btn {
+    margin-bottom: 12px;
+  }
+
+  .purpose-design {
+    font-size: 16px;
+  }
+
+  .purpose {
+    color: #534c64;
+    font-size: 12px;
+  }
+
   /* Online Game Section Responsive */
 
   .online-games-container {
@@ -587,16 +664,33 @@
 
       .banner-container {
         margin-top: 40px;
-        flex-direction: column;
+        flex-direction: column-reverse;
       }
 
       .banner-content-container {
-        width: 700px;
+        width: 720px;
+        height: 600px;
+        background-size: contain;
       }
 
       .banner-image-container {
         padding: 0;
         margin: 0 auto;
+      }
+
+      .we-are-gamer-container {
+        flex-direction: column;
+        padding: 0px 0px 50px;
+        height: auto;
+      }
+
+      .gamer-image {
+        width: 720px;
+      }
+
+      .gamer-content-container {
+        width: 700px;
+        text-align: center;
       }
 
       .online-games-container {
